# mlet-embrapa-api

./: LICENSE  README.md  app.py  commercialization.py  config.py  exportation.py  importation.py  processing.py  production.py  pyproject.toml  requirements.txt  scrapping.py  vercel.json
auth/: authentication.py
db/: model.py
routes/: commercialization.py  exportation.py  importation.py  processing.py  production.py
templates/: index.html  login.html
